@@ -1,5 +1,10 @@
 2007-05-22  Michael Natterer  <mitch@gimp.org>
 
+	* app/config/gimprc-unknown.c
+	* app/config/gimpxmlparser.c: allocate structs using GSlice.
+
+2007-05-22  Michael Natterer  <mitch@gimp.org>
+
 	* app/vectors/gimpvectors-import.c: allocate structs using GSlice.
 
 2007-05-22  Sven Neumann  <sven@gimp.org>
